<resources>
    <string name="app_name">Tugas2AKB</string>
    <string name="main_imageDesc">Logo Bloodshare</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="login_facebook">Connect With Facebook</string>
    <string name="register">doesn\'t have account? <b>Register</b></string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="blood_type">Blood Type</string>
    <string name="reshus">Reshus</string>
    <string name="retype_password">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="job">Job</string>
    <string name="home_address">Home Address</string>
    <string name="default_location">Default Location</string>
    <string name="agree">Agree with Terms and Conditions</string>
    <string name="text_register">Register</string>
    <string name="almost_there"><b>Almost There</b></string>
    <string name="verify">Verify</string>
    <string name="thank_you">Thank you for registering with us. One more\nstep,you need to check your email\nto activate your account.</string>
    <string name="enter_verification_code">enter verification code here...</string>
    <string name="verify_description">We have send verification code to your email</string>
    <string name="verify_title">Verify your Account</string>
    <string name="send">Send</string>
    <string name="resend">doesn\'t get the code? <b>Resend</b></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="profile">Profile</string>
    <string name="nama">Nama</string>
    <string name="notification">Notification</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="blood_give_number">75</string>
    <string name="blood_give_desc">Blood Give</string>
    <string name="blood_recieved_number">100</string>
    <string name="blood_recieved_desc">Blood Recieved</string>
    <string name="thanks_number">330</string>
    <string name="thanks_desc">Thanks</string>
    <string name="search_donor">Search Donor</string>
    <string name="search_donor_desc">Search donor near you</string>
    <string name="blood_needed">Blood Needed</string>
    <string name="blood_needed_desc">4 Users need blood</string>
    <string name="message">Message</string>
    <string name="message_desc">5 New Messages</string>
    <string name="donor_history">Donor History</string>
    <string name="donor_history_desc">5 Gives, 2 Recieved</string>
</resources>
