<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen25"
    android:background="@color/colorLightBlue"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen50"
        android:src="@mipmap/ic_welcome_logo"
        android:contentDescription="@string/main_imageDesc"
        android:layout_gravity="center"/>

    <EditText
        style="@style/EditTextStyleMain"
        android:layout_marginTop="@dimen/dimen25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        style="@style/EditTextStyleMain"
        android:layout_marginTop="@dimen/dimen15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen25"
        android:text="@string/login"
        android:textColor="@color/colorBackground"
        android:textSize="@dimen/text15"
        android:background="@drawable/background_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text15"
        android:text="@string/or"
        android:textColor="@color/colorBackground"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen25"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen25"
        android:text="@string/login_facebook"
        android:textColor="@color/colorBackground"
        android:textSize="@dimen/text15"
        android:background="@drawable/background_button"
        android:drawableTint="@color/colorBackground"
        android:drawableStart="@mipmap/ic_welcome_fb_login"
        android:paddingStart="@dimen/dimen25"
        android:paddingEnd="@dimen/dimen25"/>

    <TextView
        android:id="@+id/text_view_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/colorBackground"
        android:gravity="center"
        android:layout_margin="@dimen/dimen25"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>