<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    android:paddingStart="@dimen/dimen25"
    android:paddingEnd="@dimen/dimen25"
    tools:context=".VerifyActivity">

    <TextView
        android:layout_above="@id/text_view_verify_description"
        android:layout_marginBottom="@dimen/dimen15"
        android:textSize="@dimen/text40"
        android:textColor="@color/colorBackground"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_title" />

    <TextView
        android:id="@+id/text_view_verify_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen50"
        android:layout_above="@id/edit_text_verification_code"
        android:text="@string/verify_description"
        android:gravity="center"
        android:textAlignment="center"/>


    <EditText
        android:id="@+id/edit_text_verification_code"
        style="@style/EditTextStyleMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:hint="@string/enter_verification_code"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/button_send_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:layout_below="@id/edit_text_verification_code"
        android:layout_marginTop="@dimen/dimen25"
        android:text="@string/send"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend"
        android:layout_below="@id/button_send_code"
        android:layout_marginTop="@dimen/dimen15"
        android:textAlignment="center"/>

</RelativeLayout>