<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    android:paddingStart="@dimen/dimen25"
    android:paddingEnd="@dimen/dimen25"
    tools:context=".AlmostActivity">

    <TextView
        android:layout_above="@id/text_view_thankyou"
        android:layout_marginBottom="@dimen/dimen15"
        android:textSize="@dimen/text40"
        android:textColor="@color/colorBackground"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/almost_there" />

    <TextView
        android:id="@+id/text_view_thankyou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen50"
        android:layout_above="@id/button_almost_there"
        android:text="@string/thank_you"
        android:gravity="center"
        android:textAlignment="center"/>


    <Button
        android:id="@+id/button_almost_there"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:layout_centerInParent="true"
        android:text="@string/verify"/>

</RelativeLayout>