<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="12"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:background="@color/colorBackground">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen125"
                android:background="@mipmap/ic_header">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.appbar.AppBarLayout>

            <ImageView
                android:id="@+id/profile"
                android:scaleType="centerInside"
                android:layout_width="@dimen/dimen100"
                android:layout_height="@dimen/dimen100"
                android:src="@mipmap/ic_profile_default_large"
                android:layout_centerInParent="true"
                android:background="@drawable/background_profile"
                android:translationZ="20dp"
                android:contentDescription="@string/profile" />

            <TextView
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile"
                android:text="@string/nama"
                android:textColor="@color/colorLightBlue"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/dimen5"
                android:textSize="@dimen/text25"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/blood_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nama"
                android:text="@string/blood_type"
                android:textColor="@color/colorFontDesc"
                android:textAlignment="center"
                android:textSize="@dimen/text20"
                android:paddingBottom="@dimen/dimen10"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:weightSum="3"
            android:paddingStart="@dimen/dimen15"
            android:paddingEnd="@dimen/dimen15"
            android:background="@drawable/background_layout"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_give_number"
                    android:textColor="@color/colorLightBlue"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/dimen5"
                    android:textSize="@dimen/text35"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_give_desc"
                    android:textAllCaps="true"
                    android:textColor="@color/colorFontDesc"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_recieved_number"
                    android:textColor="@color/colorLightBlue"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/dimen5"
                    android:textSize="@dimen/text35"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/blood_recieved_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_recieved_desc"
                    android:textAllCaps="true"
                    android:textColor="@color/colorFontDesc"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thanks_number"
                    android:textColor="@color/colorLightBlue"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/dimen5"
                    android:textSize="@dimen/text35"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/thanks_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thanks_desc"
                    android:textAllCaps="true"
                    android:textColor="@color/colorFontDesc"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2"
                tools:ignore="NestedWeights"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/search_donor"
                        android:src="@mipmap/ic_search_donor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/search_donor"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/search_donor_desc"
                        android:textAlignment="center"
                        android:textColor="@color/colorFontDesc" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/search_donor"
                        android:src="@mipmap/ic_blood_needed" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/blood_needed"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/blood_needed_desc"
                        android:textAlignment="center"
                        android:textColor="@color/colorFontDesc" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/search_donor"
                        android:src="@mipmap/ic_message" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/message"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/message_desc"
                        android:textAlignment="center"
                        android:textColor="@color/colorFontDesc" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/search_donor"
                        android:src="@mipmap/ic_donor_history" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/donor_history"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/donor_history_desc"
                        android:textAlignment="center"
                        android:textColor="@color/colorFontDesc" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:clipToPadding="false"
        app:menu="@menu/main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>